@@ -16,13 +16,16 @@ def workspace_debug_info(context):
     return {'workspaces': workspaces}
 
 
-@register.inclusion_tag("lizard_map/tag_workspace.html")
-def workspace(workspace, show_new_workspace=True):
+@register.inclusion_tag("lizard_map/tag_workspace.html",
+                        takes_context=True)
+def workspace(context, workspace, show_new_workspace=True):
     """Display workspace."""
     return {
         'workspace': workspace,
-        'show_new_workspace': show_new_workspace
+        'date_range_form': context.get('date_range_form', None),
+        'show_new_workspace': show_new_workspace,
         }
+
 
 @register.inclusion_tag("lizard_map/tag_collage.html")
 def collage(collage_id):
@@ -32,12 +35,12 @@ def collage(collage_id):
     """
     collage = get_object_or_404(WorkspaceCollage, pk=collage_id)
     workspace_items = WorkspaceItem.objects.filter(
-        workspacecollagesnippet__in=collage.snippets.all()
-        ).distinct()
+        workspacecollagesnippet__in=collage.snippets.all()).distinct()
     return {
         'collage': collage,
-        'workspace_items': workspace_items
+        'workspace_items': workspace_items,
         }
+
 
 @register.inclusion_tag("lizard_map/tag_workspace_drag_and_drop.html")
 def workspace_drag_and_drop(workspaces):
